Closed
Bug 1869661
Opened 2 years ago
Closed 2 years ago
Crash in [@ mozilla::gfx::DrawTargetRecording::DrawTargetRecording]
Categories
(Core :: Graphics: Canvas2D, defect, P3)
Tracking
()
RESOLVED
FIXED
122 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox120 | --- | unaffected |
| firefox121 | --- | unaffected |
| firefox122 | --- | fixed |
People
(Reporter: aosmond, Assigned: aosmond)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/9aefb33c-4516-4a2a-aa78-e9b450231212
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll mozilla::gfx::DrawTargetRecording::DrawTargetRecording gfx/2d/DrawTargetRecording.cpp:198
1 xul.dll mozilla::MakeAndAddRef mfbt/RefPtr.h:629
1 xul.dll mozilla::layers::CanvasChild::CreateDrawTarget gfx/layers/ipc/CanvasChild.cpp:282
2 xul.dll mozilla::layers::RecordedTextureData::Lock gfx/layers/client/TextureRecorded.cpp:51
3 xul.dll mozilla::layers::TextureClient::Lock gfx/layers/client/TextureClient.cpp:624
4 xul.dll mozilla::layers::PersistentBufferProviderShared::BorrowDrawTarget gfx/layers/PersistentBufferProvider.cpp:445
5 xul.dll mozilla::dom::CanvasRenderingContext2D::TrySharedTarget dom/canvas/CanvasRenderingContext2D.cpp:1697
6 xul.dll mozilla::dom::CanvasRenderingContext2D::EnsureTarget dom/canvas/CanvasRenderingContext2D.cpp:1519
7 xul.dll mozilla::dom::CanvasRenderingContext2D::FillRect dom/canvas/CanvasRenderingContext2D.cpp:3033
8 xul.dll mozilla::dom::CanvasRenderingContext2D_Binding::fillRect dom/bindings/CanvasRenderingContext2DBinding.cpp:6935
| Assignee | ||
Comment 1•2 years ago
|
||
Updated•2 years ago
|
Attachment #9368306 -
Attachment description: Bug 1869661 - Ensure we check for null mRecorder in CanvasChild::CreateDrawTarget. → Bug 1869661 - Add more null checks for CanvasChild::mRecorder.
Comment 2•2 years ago
|
||
Set release status flags based on info from the regressing bug 1863914
status-firefox120:
--- → unaffected
status-firefox121:
--- → unaffected
status-firefox122:
--- → affected
status-firefox-esr115:
--- → unaffected
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3f82f965831a
Add more null checks for CanvasChild::mRecorder. r=gfx-reviewers,lsalzman
Comment 4•2 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
| Assignee | ||
Updated•2 years ago
|
Blocks: accelerated-canvas-recording
You need to log in
before you can comment on or make changes to this bug.
Description
•