Bug 1869661 - Add more null checks for CanvasChild::mRecorder. r=gfx-reviewers,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D196233